<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">Advanced Settings</string>
    <string name="adv_search_options_label">Advanced Search Options</string>
    <string name="image_size_label">Image Size</string>
    <string-array name="size_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>All</item>
    </string-array>
        <string name="save_label">Save</string>
        <string name="site_filter_hint">yahoo.com</string>
        <string name="site_filter_label">Site filter</string>
    <string-array name="color_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
        <item>All</item>
    </string-array>
    <string-array name="type_array">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
        <item>All</item>
    </string-array>
    <string name="color_filter_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="settings_label">Settings</string>
    
</resources>
